--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
+baseURL = 'http://hnjae.github.io/'
+languageCode = 'ko-KR'
 title = 'My New Hugo Site'
