--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,10 @@
-baseURL: 'http://hnjae.github.io/'
+baseURL: 'https://hnjae.github.io/'
 languageCode: 'ko-KR'
-title: 'My New Hugo Site'
+title: 'Hugo Site Test'
 theme: "anubis"
 
 params:
   author: "Hyunjae Kim"
   email: "test@test.org"
   dateFormat: "2006-01-02 15:04:05 MST"
-  style: auto
+  style: auto-without-switcher
