--- a/config.yml
+++ b/config.yml
@@ -6,5 +6,9 @@ theme: "anubis"
 params:
   author: "Hyunjae Kim"
   email: "test@test.org"
-  dateFormat: "2006-01-02 15:04:05 MST"
+  dateFormat: "2006-01-02 15:04:05 -0700"
+  rssAsSocialIcon: true
   style: auto-without-switcher
+  social:
+    - id: github
+      name: hnjae
