--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ theme: "anubis"
 params:
   author: "Hyunjae Kim"
   email: "test@test.org"
-  dateFormat: "2006-01-02 15:04:05 -0700"
+  dateFormat: "2006-01-02"
   rssAsSocialIcon: true
   style: auto-without-switcher
   social:
